# ca9

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE_WORKFLOW.md  SECURITY.md  action.yml  manifest.json  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml  feed.yml  release.yml
ca9_mcp/: server.py
demo/: app.py  test_app.py
demo/supply_chain/: .gitignore  README.md  make_demo.py  run_demo.sh
docs/: benchmarks.md  demo.md  index.md  release-checklist.md  robots.txt
docs/api/: analysis.md  engine.md  models.md  parsers.md  report.md  scanner.md
docs/architecture/: analysis.md  engine.md  evidence.md  overview.md  parsers.md
docs/assets/: structured-data.js
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  formats.md  positioning.md  proof-standards.md  supply-chain.md
docs/integrations/: ci-cd.md  dependabot.md  github-action.md  mcp.md  openvex.md  osv.md  pip-audit.md  sarif.md  sbom.md  snyk.md  trivy.md
docs/proof/: incident-coverage.md
docs/proposals/: default-feed.md
scripts/: build_feed.py  bump_version.py  incident_replay.py  npm_real_repo_validation.py  real_repo_validation.py
src/ca9/: action_plan.py  advisory.py  cli.py  config.py  coverage_provider.py  engine.py  hunt.py  intel_rules.py  inventory.py  models.py  package_feed.py  package_policy.py  policy.py  remediation.py  report.py  runtime_context.py  sbom.py  scanner.py  scoring.py  supply_chain.py  threat_intel.py  vex.py  vex_diff.py
src/ca9/analysis/: api_usage.py  ast_scanner.py  call_graph.py  coverage_reader.py  entry_points.py  exploit_path.py  otel_reader.py  vuln_matcher.py
src/ca9/analyzers/: __init__.py  github_actions.py  license_policy.py  package_code.py  supply_chain.py
src/ca9/artifacts/: __init__.py  fetch.py  model.py  unpack.py
src/ca9/capabilities/: diff.py  emit.py  models.py  normalize.py  policy.py  risk.py  scanner.py
src/ca9/core/: __init__.py  models.py  pipeline.py
src/ca9/ingest/: __init__.py  models.py  sarif.py
src/ca9/parsers/: base.py  dependabot.py  pip_audit.py  snyk.py  trivy.py
src/ca9/readers/: __init__.py  fyn_lock.py  npm_lock.py  package_lock.py
src/ca9/rules/: django.yml  jinja2.yml  pyyaml.yml  requests.yml  urllib3.yml  werkzeug.yml
src/ca9/runtime/: __init__.py  ci.py  npm_gateway.py  preflight.py  pypi_gateway.py  shell.py
tests/: test_action_plan.py  test_advisory.py  test_api_usage.py  test_artifacts.py  test_ast_scanner.py  test_build_feed.py  test_call_graph.py  test_capabilities.py  test_capabilities_integration.py  test_ci_setup.py  test_cli.py  test_config.py  test_core_models.py  test_coverage_provider.py  test_engine.py  test_entry_points.py  test_exploit_path.py  test_github_actions_analyzer.py  test_hunt.py  test_incident_replay.py  test_intel_rules.py  test_inventory.py  test_license_policy.py  test_mcp_server.py  test_npm_gateway.py  test_otel_reader.py  test_package_code_analyzer.py  test_package_feed.py  test_package_policy.py  test_parsers.py  test_pipeline.py  test_policy.py  test_pypi_gateway.py  test_release_script.py  test_release_window.py  test_remediation.py  test_runtime_context.py  test_runtime_preflight.py  test_sarif.py  test_sarif_ingest.py  (+9 more)
tests/fixtures/: sample_cyclonedx.json  sample_otel_traces.json  sample_spdx.json
tests/fixtures/incidents/: github-actions-workflow-backdoor-2026-05.json  github-token-exfiltration-2026-05.json  grafana-github-token-2026-05.json  (+6 more)
tools/release/: release-please-config.json
(+8 files in other folders)
